# fin_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile.compose  README.md  alembic.ini  pyproject.toml
.cursor/rules/: fastapi-server.mdc  project-context.mdc  python-standards.mdc
alembic/: env.py
alembic/versions/: 001_initial_feedback_frequent_qa_qa_table.py  002_add_answer_history_feedback_question_aliases.py
docs/: DOCUMENT_INGESTION_AND_RAG.md  Document chunking.md  load_data_dummy_payload.json  load_data_dummy_payload_2.json
experiments/profile/: profile_test.py  stress_test.py  stress_test_bge.py
experiments/retriever/: step2.py
experiments/retriever/answer/: convert_rerwrite_to_list.py
openapi/: README.md  openapi.json  openapi.yaml
script/: create_QA_table.py  generate_openapi.py  load_data.py
src/: config.py  database.py  load_document.py  models.py  server.py
src/prompts/: qa.py
src/services/: __init__.py  bm25_storage.py  doc_processing_llm.py  feedback_processor.py
src/test/: chat_service_test.py  eval_rewrite.py  qa_e2e.py  qa_e2e_async.py  qa_e2e_json.py  rag_test.py  rerank_test.py  test_filled_csv.py  write_csv.py  write_csv_test_single_question.py
src/test/test_questions/: README.md
src/treerag/: __init__.py  tree_rag.py  tree_rag_service.py
src/utils/: QARetriever.py  bm25Retriever.py  ensembleRetriever.py  faissRetriever.py  frequentQA.py  ragManager.py  vllmChatService.py  vllmManager.py
treerag/: TreeRag.py
