[project]
name = "fin-rag"
version = "0.1.0"
description = "FinSage RAG Agent — multi-retrieval (BM25/FAISS/Chroma), rerankers, OpenAI-compatible LLM, REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FinSage" }]
keywords = ["rag", "retrieval", "llm", "financial", "finrage"]

dependencies = [
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    # HTTP client
    "requests>=2.28.0",
    # Config & serialization
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # LLM gateway client (llm-service via HTTP)
    # ML / embeddings / retrieval
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-community>=0.3.0",
    # Chroma: thin client for client-server mode (smaller deps). See https://docs.trychroma.com/guides/deploy/python-thin-client
    # langchain-chroma may pull in full chromadb; for thin-client-only run: uv pip uninstall chromadb
    "chromadb-client>=0.4.0",
    # BM25
    "bm25s>=0.1.0",
    "PyStemmer>=2.2.0",
    # Reranker
    "FlagEmbedding>=1.2.0",
    # PostgreSQL + migrations (non-vector DB)
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Utilities
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "gputil>=1.4.0",
    "psutil>=5.9.0",
    "transformers>=4.36.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
# Local Chroma (persist to disk). Only needed if not using Chroma client-server.
chroma-local = ["chromadb>=0.4.0"]
# GPU FAISS (use instead of faiss-cpu when CUDA available; version relaxed for lockfile resolution)
gpu = ["faiss-gpu>=1.7.0"]
# Dev & debugging
dev = [
    "ipdb>=0.13.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
# Load testing (experiments/profile/locust_test.py)
loadtest = [
    "locust>=2.20.0",
    "gevent>=23.0.0",
]
# Viz (scripts & experiments)
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
]
# Install dev + loadtest + viz (gpu extra separate: faiss-gpu has limited platforms)
all = [
    "ipdb>=0.13.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "locust>=2.20.0",
    "gevent>=23.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: app lives under src/; run from repo with PYTHONPATH=src or cd src && uv run ...
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "script", "treerag", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
